# wifi-display

./: CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  gt911_service.c  gt911_service.h  idf_component.yml  main.c  priorities.h  supervisor.c  supervisor.h  system.c  system.h  wifi_service.c  wifi_service.h  wifi_setup.c  wifi_setup.h
